Version 0.11.0-SNAPSHOT
    * TODO

Version 0.10.0
    $ [fix] #174 add shortcuts on some actions
    * [fix] #163 and #177 Malformed filter causes IDE freezing
    * [fix] #176 _id can be one of the supported JSON type excepting Array
    * [fix] #173 CodecConfigurationException when using DBRef
    * [fix] Notification message when saving a document
    * [add] #133 Handle DBRef with Navigation (experimental)

Version 0.9
    * [fix] #139 NPE when clicking on Expand/Collapse whereas there is no server configuration set
    * [fix] #172 and #168 NPE when configuration label is not set
    * [update] Migrate to mongo driver 3.3.0
    * [add] #151 Add SSH Tunneling (experimental) + redesign configuration Panel
    * [add] Use Event Log for plugin messages
    * [add] #105 add Table view

Version 0.8
    * [fix] #123 cannot connect when user database is not set

Version 0.7.6
    * Idea 2016

Version 0.7.5
    * Idea 15

Version 0.7.4
    * [fix] Open Settings action
    * [fix] Mongo Shell command launching
    * [add] Server Settings: ReadPreference option
    * [add] Server Settings: Copy Server action (PR #141, thanks kocherovf)
    * [add] Explorer panel: speed search on databases and collections (thanks kocherovf)

Version 0.7.3
    * [update] Compatibility with the latest Jetbrains IDE (Idea 15, Webstorm 11, etc.)

Version 0.7.2
    * [fix] better mongo 3 compatibility
    * [update] Improve UI reactivity
    * [update] Settings: remove set database single access checkbox (its usage was unclear)
    * [update] Explorer: remove Refresh all servers action (its usage was unclear)
    * [add] Auth mechanism choice in the configuration panel

Version 0.7.1
    * [fix] compatibility with Idea 14.1 and latest jetbrains product version (thx pwilkin)
    * [upd] migrate to mongo driver 3.0

Version 0.7.0
    * [fix] compatibility with Idea 14, Webstorm 9 products
    * [fix] Idea violation when using mongo operator completion